# wp-backup

./: .env.example  .env.local.example  .gitattributes  .gitignore  LICENSE  README.md  backup-cron.bat  backup-cron.sh  cleanup-temp.sh  crontab-examples.txt  install.sh  pyproject.toml
config/: .gitkeep
logs/: README.md
src/: __init__.py  cli.py  utils.py
src/core/: __init__.py  backup.py  config.py
src/providers/: __init__.py  base.py  gdrive.py  wordpress.py
src/security/: __init__.py  secrets.py  validator.py
